# eslimpp

./: CMakeLists.txt  LICENSE  README.md  building_package.md  pyproject.toml  requirements.txt
.github/workflows/: cpp_test.yml
docs/: README.md
docs/doxygen/: Doxyfile
docs/sphinx/: requirements.txt
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/eslim++/opinions/: opinion.rst  opinion_no_base.rst  trusted_opinion.rst
docs/sphinx/source/eslim++/types/: cuda_compatible_array.rst  dirichlet_distribution.rst
publications/: README.md
publications/2025_mfi_wodtko/: 2025_mfi_wodtko_balancing.bib  README.md  barycentric_triangle.py  exp_constant_parameter.py  exp_distribution.py  exp_nonconstant_parameter.py  exp_symTR.py  per_trust.py  requirements.txt  symmetric_tr.py
publications/citations/: wodtko_mfi_2025.bib
publications/eSLIM++/: README.md  classification_mixture_update.py  classification_task.py  gathering_information.py  requirements.txt  time_consistency_consideration.py
publications/eSLIM++/grid/: CMakeLists.txt  cpu_assessment.cpp  dst_update.patch  functions.hpp  fzi_assessment.cpp  gpu_assessment.cu  grid_self_assessment.cpp  heudiasyc_assessment.cpp  package.xml
