[build-system]
requires = [
  "scikit-build-core >=0.4.3", 
  "nanobind >=1.3.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "eSLIMpp"
version = "0.1.1"
description = "efficient Subjective Logic IMplementation in C++ providing Python interfaces"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Thomas Wodtko", email = "wodtko+eslimpp@gmail.com" },
]
license = "Apache-2.0"
dependencies =[
  "numpy >= 1.26.0",
  "matplotlib >= 2.6.0",
]

[project.urls]
Homepage = "https://github.com/uulm-mrm/eslim"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# meant for GitHub intgration
[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

skip = ["cp38-*", "pp38-*"] # Skip CPython and PyPy 3.8
archs = ["auto64"]          # Only target 64-bit architectures

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
